--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -62,7 +62,7 @@
     <!-- ===================== JA ===================== -->
     <section id="ja" class="lang">
       <div class="card">
-        <h2>プライバシーポリシー（日本語）</h2>
+        <h2>プライバシーポリシー</h2>
         <p><strong>最終更新日：</strong>2025-12-22</p>
         <p><strong>アプリ名：</strong>Note M+</p>
         <p><strong>提供者：</strong>Kazuki Nagino（以下「当方」）</p>
@@ -140,7 +140,7 @@
     <!-- ===================== EN ===================== -->
     <section id="en" class="lang">
       <div class="card">
-        <h2>Privacy Policy (English)</h2>
+        <h2>Privacy Policy</h2>
         <p><strong>Last updated:</strong> 2025-12-22</p>
         <p><strong>App:</strong> Note M+</p>
         <p><strong>Provider:</strong> Kazuki Nagino (“we”, “us”)</p>
